# Spreadsheet2Video-ComfyUI

./: .gitignore  LICENSE  README.md  Spreadsheet2VideoNodes.py  __init__.py  package.json  pyproject.toml
.github/workflows/: publish.yml
docs/: deforum_maker.html
example_workflows/: Cooking.csv  GolfBall.kdenlive  Spreadsheet2Video_Comparison.json  Spreadsheet2Video_ConcatVideo.json  Spreadsheet2Video_ConcatVideoRoom.json  Spreadsheet2Video_LTX_example.json  Spreadsheet2Video_Multiply_Spreadsheet.json  Spreadsheet2Video_NonVideo.json  Spreadsheet2Video_StyleChangeComparison.json  Spreadsheet2Video_deforum.json  Spreadsheet2Video_sampler_comparison.json  Spreadsheet2Video_sampler_test.json
extra_workflows/: Spreadsheet2Video_Comparison_zimage_Expression.json
js/: Spreadsheet2Video.js
tests/: test_boolean.json  test_dropdown.json  test_fileslist.json  test_sequence.json
