[project]
name = "Spreadsheet2Video-ComfyUI"
version = "1.0.6"
description = "Use a spreadsheet as input for ComfyUI execution"
license = { file = "LICENSE" }
dependencies = [
]
classifiers = [
    "Operating System :: OS Independent"  # Works on all operating systems
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/niknah/Spreadsheet2Video-ComfyUI"
Documentation = "https://niknah.github.com/Spreadsheet2Video-ComfyUI"
"Bug Tracker" = "https://github.com/niknah/Spreadsheet2Video-ComfyUI/issues"

[tool.comfy]
PublisherId = "niknah"
DisplayName = "Spreadsheet2Video"
Icon = "https://raw.githubusercontent.com/niknah/Spreadsheet2Video-ComfyUI/refs/heads/main/Spreadsheet2Video_Logo.png"
